[project]
name = "kumaprobe"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tyrone Faulhaber", email = "20131658+spectrapulse@users.noreply.github.com" }
]
dependencies = [
    "docker>=7.1.0",
    "aiohttp>=3.10.8",
    "uvloop>=0.20.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
"kumaprobe" = "kumaprobe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kumaprobe"]
